# resume-customizer

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  test_example.py
resume_customizer/: __init__.py  gemini_client.py  latex_converter.py  latex_template.py  resume_parser.py
src/: app.py  gemini_client.py  latex_template.py  resume_parser.py
